--- a/src/App.xaml
+++ b/src/App.xaml
@@ -5,11 +5,12 @@
              xmlns:local="clr-namespace:StretchReminderApp">
     <Application.Resources>
         <ResourceDictionary>
+            <!-- Alternative approach without direct icon reference to avoid parsing issues -->
             <tb:TaskbarIcon x:Key="NotifyIcon"
-                            IconSource="pack://application:,,,/Resources/stretch_icon.ico"
                             ToolTipText="Stretch Reminder">
                 <tb:TaskbarIcon.ContextMenu>
                     <ContextMenu>
+                        <MenuItem Header="Open" Click="ShowMenuItem_Click"/>
                         <MenuItem Header="View Stats" Click="StatsMenuItem_Click"/>
                         <MenuItem Header="Settings" Click="SettingsMenuItem_Click"/>
                         <Separator/>
