renamed the app namesapce

--- a/src/App.xaml
+++ b/src/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="StretchReminderApp.App"
+﻿<Application x:Class="StretchTracker.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:tb="http://www.hardcodet.net/taskbar"
-             xmlns:local="clr-namespace:StretchReminderApp">
+             xmlns:local="clr-namespace:StretchTracker">
     <Application.Resources>
         <ResourceDictionary>
             <!-- Alternative approach without direct icon reference to avoid parsing issues -->
