--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="StretchReminderApp.MainWindow"
+﻿<Window x:Class="StretchTracker.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:StretchReminderApp"
+        xmlns:local="clr-namespace:StretchTracker"
         mc:Ignorable="d"
         Title="Stretch Reminder" Height="580" Width="900"
         WindowStartupLocation="CenterScreen"
