--- a/src/StatsWindow.xaml
+++ b/src/StatsWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="StretchReminderApp.UI.StatsWindow"
+﻿<Window x:Class="StretchTracker.UI.StatsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Stretching Statistics" Height="650" Width="900"
